# celery_mon

./: .gitignore  README.md  celery_monitor.py  config.example.yaml  pyproject.toml  requirements.txt  supervisor_celery_monitor.example.conf  zabbix_template_celery_monitor.xml
celery_monitor/: __init__.py  cli.py  config.py  events_collector.py  metrics.py  runner.py  zabbix_exporter.py
test/: README.md  celery_app.py  conftest.py  docker-compose.yml  run_full_test.ps1  run_test.py  start_redis.ps1  tasks.py  test_components.py
