[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "celery-monitor"
version = "0.1.0"
description = "Celery metrics collector for Zabbix"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "celery>=5.5.3",
    "redis",
    "PyYAML",
    "zabbix_utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
celery_monitor = "celery_monitor.cli:main"

[tool.setuptools.packages.find]
include = ["celery_monitor*"]

[tool.pytest.ini_options]
testpaths = ["test"]
